--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
         <distributionManagement>  
   <repository>  
     <id>mokylin</id>  
-    <url>http://mvn.chentm.com/nexus/content/repositories/mokylin</url>  
+    <url>https://mvn.chentm.com/nexus/content/repositories/mokylin</url>  
   </repository>  
 </distributionManagement>  
 
